Preserve configured target URL base paths
Co-authored-by: Erik Schultink <eschultink@users.noreply.github.com>